# ttlab-hackathon-copilot-adp

./: .gitignore  Readme.md  developer.md
app/: .env.example  Makefile  main.py
app/genie/: cli.py
backend/: .env  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/genie/: cli.py  genie_client.py
frontend/: package-lock.json  package.json
misc/: README.md  csv_sqlite_loader.py  vandalism_ranking.csv
nlptosql/: nlp_to_sql.py
server/: main.py  requirements.txt
